--- a/src/app/components/search-box/search-box.component.scss
+++ b/src/app/components/search-box/search-box.component.scss
@@ -11,7 +11,6 @@
   &__input {
     display: flex;
     width: 100%;
-    flex: 1;
     border: none;
     padding-left: 10px;
     &:focus {
@@ -27,6 +26,7 @@
     img {
       width: 100%;
       max-width: 25px;
+      max-height: 25px;
     }
   }
 }
